# ms

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: arch.puml
ms/: base.py  color.py  draw.py  game.py  main.py  mouse.py
