[tool.poetry]
name = "ms"
version = "0.1.0"
description = ""
authors = ["Hennadii Demchenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

pygame = "^2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.mypy]
python_version = 3.10
strict = true
